[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-switch"
version = "1.0.0"
description = "Python library for controlling H6P-330127 SP6T RF switches via Arduino Nano Every"
readme = "README.md"
authors = [{ name = "Pranav Govekar" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["pyserial>=3.5"]
keywords = ["rf", "switch", "arduino", "serial", "H6P-330127"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/yourusername/rf-switch"
